Session 6 of Coding Journal 1

--- a/cj1-s6.ipynb
+++ b/cj1-s6.ipynb
@@ -88,9 +88,11 @@
    "outputs": [],
    "source": [
     "def loop():\n",
+    "    x=[]\n",
     "    y=[]\n",
     "    z=[]\n",
     "    for x in range (1,10):\n",
+    "        x.append(x)\n",
     "        y.append(s(x))\n",
     "        z.append(c(x))\n",
     "    data=Table([x,y,z],names=['x','sin(x)','cos(x)'])\n",
